--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html style="margin: 0; padding: 0;">
     <head>
         <title>Game</title>
+        <link rel="shortcut icon" href="graphics/angryrobin.png">
+
         <script src="jquery-3.1.1.min.js"></script>
         <script src="howler.min.js"></script>
         <style>
