--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			}
         </style>
     </head>
-    <body style="margin: 0; padding: 0; background: black;">
+    <body style="margin: 0; padding: 0; background: black; cursor: none;">
         <canvas width="800" height="600" allowfullscreen="true" id="gameCanvas" style="margin-left: 10px; margin-top: 10px;"></canvas>
         <script>
 
